# authalla-cli

./: Cargo.toml  LICENSE  README.md  SPEC-LOGIN.md  dist-workspace.toml
.github/workflows/: release.yml
src/: api.rs  auth.rs  config.rs  main.rs
src/commands/: account.rs  client.rs  custom_domain.rs  custom_email.rs  login.rs  logout.rs  mod.rs  social_login.rs  tenant.rs  theme.rs  user.rs  well_known.rs
