[package]
name = "authalla"
version = "0.3.0"
edition = "2021"
description = "CLI tool for the Authalla OAuth2 API"
license = "MIT"
repository = "https://github.com/authalla/authalla-cli"
homepage = "https://authalla.com"

[[bin]]
name = "authalla"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
base64 = "0.22"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
